--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.5.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
+    "lodash.debounce": "^4.0.8",
     "postcss": "^8.1.14",
     "postcss-cli": "^8.3.0",
     "react": "^17.0.1",
